boxingtimer-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: boxingtimer
  labels:
    app: boxingtimer
spec:
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
  selector:
    app: boxingtimer
