boxingtimer-ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: boxingtimer
  annotations:
    kubernetes.io/ingress.class: nginx
    # nginx.ingress.kubernetes.io/rewrite-target: /
  labels:
    app: boxingtimer
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: boxingtimer
                port:
                  number: 80
